force-app/main/default/objects/Premium_Offer__c/Premium_Offer__c.object-meta.xml
<CustomObject>
    <label>Premium Offer</label>
    <nameField>
        <label>Premium Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premium Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>