force-app/main/default/objects/Premium_Offer__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premium</label>
    <referenceTo>Premiums__c</referenceTo>
    <relationshipLabel>Premium Offers</relationshipLabel>
    <relationshipName>Premium_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>