force-app/main/default/objects/Premium_Offer__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Premium Offers</relationshipLabel>
    <relationshipName>Premium_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>